# articulos

./: .env  .gitignore  Cargo.toml  Makefile.toml  README.md  docker-compose.yml  index.html  model.plantuml  state.plantuml
backend/: Cargo.toml  Makefile.toml  README.md  docker-compose.yml  tauri.conf.json
backend/sql/: create-schema.sql  init.sh  insert-articles_caja.sql  insert-familia.sql  insert-panel.sql  insert-precios.sql  insert-precios_2.sql  insert-precios_4.sql  insert-precios_5.sql  insert-precios_7.sql  insert-precios_8.sql  triggers.sql
backend/sql_test/: create-schema.sql  init.sh  insert-articles.sql  insert-articles_caja.sql  insert-familia.sql  insert-precios.sql
backend/src/: main.rs
backend/src/article/application/: create_article.rs  find_article.rs  mod.rs  remove_article.rs  update_article.rs
backend/src/article/application/dto/: article_id_dto.rs  article_name_dto.rs  create_article_dto.rs  mod.rs  update_article_dto.rs
backend/src/article/domain/: article.rs  article_repository.rs
backend/src/article/infrastructure/db/: mod.rs
backend/src/article/infrastructure/db/tiberius/: create_config.rs  mod.rs  mssql_article_repository.rs  tiberius_article.rs  utils.rs
backend/src/common/application/: login_database.rs  mod.rs
backend/src/common/application/dto/: login_input_dto.rs  login_output_dto.rs  mod.rs
backend/src/common/domain/: db_connection.rs
backend/src/common/infrastructure/controllers/: login_controller.rs
backend/src/common/infrastructure/db/tiberius/: create_config.rs  mod.rs
backend/tests/: article_use_cases_test.rs  mssql_article_repository_test.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs  prueba.rs
frontend/src/components/: form.rs  header.rs  login_input.rs  mod.rs
frontend/src/routes/: database_chooser.rs  login.rs  mod.rs
frontend/src/stores/: login_info.rs
sql/: create-schema.sql  init.sh  insert-articles.sql  insert-articles_caja.sql  insert-familia.sql  insert-panel.sql  insert-precios.sql  insert-precios_3.sql  insert-precios_6.sql  insert-precios_9.sql
src/: Cargo.toml  app.rs  javascript.js  main.rs
src/article/application/: create_article_use_case.rs
src/article/domain/: article.rs  article_repository.rs  mod.rs
src/article/infrastructure/: mod.rs  mssql_article_repository.rs
src/components/: autocomplete.rs  header.rs  mod.rs
src/domain/: mod.rs
src/domain/articulo/: articulo.rs  mod.rs
src/infrastructure/: create_config.rs  mod.rs  mssql_repository.rs
src/routes/: home.rs  login.rs
