[package]
name = "articulos_senator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
bigdecimal = { version = "0.3.0", features = ["serde"] }
chrono = { version = "0.4.23", features = ["serde"]}
dotenvy = "0.15.6"
futures = "0.3.26"
mockall = "0.11.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tiberius = { version = "0.12.1", features = ["bigdecimal", "chrono"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["compat"] }
