[package]
name = "articulos-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.20", features = ["csr"] }
web-sys = "0.3"
gloo-console = "0.2.3"
wasm-bindgen = "0.2.84"

[workspace]
members = ["backend"]
