[package]
name = "backend"
version = "0.0.0"
description = "Articulos backend"
authors = ["Antonio Garces <garces080995@gmail.com>"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.70"
dotenvy = "0.15.7"
mockall = "0.11.4"
async-trait = "0.1.68"
tiberius = { version = "0.12.1", features = ["bigdecimal", "chrono"] }
tokio-util = { version = "0.7.7", features = ["compat"] }
bigdecimal = { version = "0.3.0", features = ["serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
tokio = { version = "1.27.0", features = ["full"] }
actix-web = "4.3.1"
actix-cors = "0.6.4"
log = "0.4.17"
env_logger = "0.10.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
