[package]
name = "articulos-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-bootstrap = "0.5"
gloo-console = "0.2.3"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3", features = ["HtmlTextAreaElement", "HtmlSelectElement"] }
yew-router = "0.17.0"
yewdux = "0.9.2"
tokio = "1.27.0"

backend = { path = "../backend" }

